--- a/arch/arm/configs/psn_i9300_v2.3.3c_defconfig
+++ b/arch/arm/configs/psn_i9300_v2.3.3c_defconfig
@@ -37,7 +37,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-v2.3.3c-OC"
+CONFIG_LOCALVERSION="-India-v2.3.3c-OC-EMG4+"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -75,7 +75,8 @@ CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
-# CONFIG_IKCONFIG is not set
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
@@ -179,11 +180,20 @@ CONFIG_LBDAF=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -557,6 +567,7 @@ CONFIG_BT_MGMT=y
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
+CONFIG_CHARGE_LEVEL=y
 
 #
 # Processor Type
@@ -717,15 +728,20 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND_FLEXRATE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVEQ=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
 # CONFIG_CPU_FREQ_DVFS_MONITOR is not set
 CONFIG_CPU_IDLE=y
@@ -818,9 +834,27 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_LRO is not set
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
-# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -1308,6 +1342,7 @@ CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_SIM_SLOT_SWITCH is not set
 # CONFIG_LTE_MODEM_CMC220 is not set
 # CONFIG_INTERNAL_MODEM_IF is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1379,7 +1414,26 @@ CONFIG_TUN=y
 # CONFIG_VETH is not set
 # CONFIG_MII is not set
 # CONFIG_PHYLIB is not set
-# CONFIG_NET_ETHERNET is not set
+CONFIG_NET_ETHERNET=y
+# CONFIG_AX88796 is not set
+# CONFIG_SMC91X is not set
+# CONFIG_DM9000 is not set
+# CONFIG_ENC28J60 is not set
+# CONFIG_ETHOC is not set
+# CONFIG_SMC911X is not set
+# CONFIG_SMSC911X is not set
+# CONFIG_DNET is not set
+# CONFIG_IBM_NEW_EMAC_ZMII is not set
+# CONFIG_IBM_NEW_EMAC_RGMII is not set
+# CONFIG_IBM_NEW_EMAC_TAH is not set
+# CONFIG_IBM_NEW_EMAC_EMAC4 is not set
+# CONFIG_IBM_NEW_EMAC_NO_FLOW_CTRL is not set
+# CONFIG_IBM_NEW_EMAC_MAL_CLR_ICINTSTAT is not set
+# CONFIG_IBM_NEW_EMAC_MAL_COMMON_ERR is not set
+# CONFIG_B44 is not set
+# CONFIG_KS8851 is not set
+# CONFIG_KS8851_MLL is not set
+# CONFIG_FTMAC100 is not set
 CONFIG_NETDEV_1000=y
 # CONFIG_STMMAC_ETH is not set
 CONFIG_NETDEV_10000=y
@@ -1390,7 +1444,9 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
+CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
@@ -1454,7 +1510,7 @@ CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
-# CONFIG_INPUT_JOYDEV is not set
+CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 # CONFIG_INPUT_SECBRIDGE is not set
@@ -2165,6 +2221,7 @@ CONFIG_MALI_OSMEM_ONLY=y
 # CONFIG_VIDEO_MALI400MP_DEBUG is not set
 CONFIG_VIDEO_MALI400MP_DVFS=y
 # CONFIG_VIDEO_MALI400MP_STREAMLINE_PROFILING is not set
+CONFIG_GPU_CLOCK_CONTROL=y
 CONFIG_VIDEO_FIMG2D=y
 # CONFIG_VIDEO_FIMG2D_DEBUG is not set
 CONFIG_VIDEO_FIMG2D4X=y
@@ -2277,6 +2334,8 @@ CONFIG_FB_S5P_S6E8AA0=y
 CONFIG_S6E8AA0_AMS480GYXX=y
 CONFIG_AID_DIMMING=y
 CONFIG_LCD_FREQ_SWITCH=y
+# CONFIG_LCD_FREQ_SWITCH_ACCOUNTING is not set
+# CONFIG_CPU_FREQ_LCD_FREQ_DFS is not set
 CONFIG_FB_S5P_EXTDSP=y
 # CONFIG_FB_S5P_EXTDSP_DEBUG is not set
 CONFIG_FB_S5P_EXTDSP_NR_BUFFERS=3
@@ -2860,10 +2919,13 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_XVMALLOC=y
+CONFIG_ZSMALLOC=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZRAM_FOR_ANDROID=y
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_XVMALLOC=y
 CONFIG_ZCACHE=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
@@ -2983,13 +3045,14 @@ CONFIG_UDF_FS=y
 CONFIG_UDF_NLS=y
 
 #
-# DOS/FAT/NT Filesystems
+# DOS/FAT/exFAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_EXFAT_FS=m
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_DEBUG=y
 CONFIG_NTFS_RW=y
@@ -3120,6 +3183,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # Kernel hacking
@@ -3262,6 +3326,7 @@ CONFIG_CRYPTO=y
 #
 # Crypto core or helper
 #
+# CONFIG_CRYPTO_FIPS is not set
 CONFIG_CRYPTO_FIPS_INTEG_OFFSET=0x20000000
 CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
@@ -3271,7 +3336,9 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
+CONFIG_CRYPTO_PCOMP=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
@@ -3351,13 +3418,13 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 # Compression
 #
 CONFIG_CRYPTO_DEFLATE=y
-# CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_ZLIB=y
+CONFIG_CRYPTO_LZO=y
 
 #
 # Random Number Generation
 #
-# CONFIG_CRYPTO_ANSI_CPRNG is not set
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
