Compiler optimisations and add build script

--- a/arch/arm/configs/t0_04_defconfig
+++ b/arch/arm/configs/t0_04_defconfig
@@ -106,7 +106,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-CONFIG_CC_CHECK_WARNING_STRICTLY=y
+# CONFIG_CC_CHECK_WARNING_STRICTLY is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=1
