--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -109,7 +109,6 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
-
 config CPU_FREQ_DEFAULT_GOV_HOTPLUG
 	bool "hotplug"
 	select CPU_FREQ_GOV_HOTPLUG
@@ -122,6 +121,17 @@ config CPU_FREQ_DEFAULT_GOV_HOTPLUG
 	  support the hotplug governor. If unsure have a look at
 	  the help section of the driver. Fallback governor will be the
 	  performance governor.
+
+config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
+      	bool "zzmoove"
+    	select CPU_FREQ_GOV_ZZMOOVE
+    	help
+          ZZMoove governor is based on the modified conservative'smoove' governor
+          from Michael Weingaertner. Modified by Zane Zaminsky November 2012 to be
+          hotplug-able and optimzed for use with Samsung I9300.
+          CPU Hotplug modifications partially taken from ktoonservative governor from
+          ktoonsez KT747-JB kernel. DUAL CORE MODE
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -195,6 +205,16 @@ config CPU_FREQ_GOV_INTERACTIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_ZZMOOVE
+       tristate "'zzmoove' cpufreq governor"
+       depends on CPU_FREQ
+       help
+        'zzmoove' - ZZMoove governor is based on the modified
+        conservative 'smoove' governor from Michael Weingaertner.
+        Modified by Zane Zaminsky November 2012 to be
+        hotplug-able and optimzed for use with Samsung I9300.
+        DUAL CORE MODE
 
 config CPU_FREQ_GOV_CONSERVATIVE
 	tristate "'conservative' cpufreq governor"
