Added v3.3 defconfig and updated build script

--- a/arch/arm/configs/psn_v3.3_defconfig
+++ b/arch/arm/configs/psn_v3.3_defconfig
@@ -38,7 +38,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-v3.2b-OC"
+CONFIG_LOCALVERSION="-India-v3.3-OC"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1450,6 +1450,7 @@ CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_LINK_ETHERNET is not set
 CONFIG_LINK_DEVICE_CLASS_CDC_ACM=y
 # CONFIG_LINK_DEVICE_CLASS_CDC_NCM is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1551,13 +1552,12 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=m
-# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
-CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=100
+# CONFIG_BRCM_CCX is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
