--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -94,4 +94,5 @@ ifeq ($(TIMA_ENABLED),1)
 obj-$(CONFIG_TIMA_LOG)		+= tima_debug_log.o
 endif
 
+# Touchwake
 obj-$(CONFIG_TOUCH_WAKE)  += touch_wake.o
