Updated v3.4 defconfig and build script

--- a/arch/arm/configs/psn_v3.4_defconfig
+++ b/arch/arm/configs/psn_v3.4_defconfig
@@ -38,7 +38,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-v3.3d-OC"
+CONFIG_LOCALVERSION="-India-v3.4-OC"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -842,7 +842,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
+CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -1723,6 +1723,7 @@ CONFIG_TOUCHSCREEN_MELFAS_NOTE=y
 # CONFIG_TOUCHSCREEN_ATMEL_MXT540S is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT1188S is not set
 # CONFIG_TOUCHSCREEN_MELFAS_GD2 is not set
+CONFIG_TOUCH_BOOST_SWITCH=y
 CONFIG_INPUT_WACOM=y
 # CONFIG_EPEN_WACOM_G5SP is not set
 CONFIG_EPEN_WACOM_G9PM=y
