--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -84,7 +84,7 @@ obj-y				+= 2mic/
 obj-$(CONFIG_SLP_PROCESS_MON)	+= slp_process_monitor.o
 obj-$(CONFIG_SLP_LOWMEM_NOTIFY)	+= slp_lowmem_notify.o
 
-obj-$(CONFIG_MACH_T0_CHN_CTC)   += cw_tty.o
+obj-$(CONFIG_MACH_M0_CTC)   += cw_tty.o
 
 # Secure OS Mobicore Interface
 obj-$(CONFIG_MOBICORE_SUPPORT)  += tzic.o
