Updated v3.5 defconfig and build script

--- a/arch/arm/configs/psn_v3.5_defconfig
+++ b/arch/arm/configs/psn_v3.5_defconfig
@@ -38,7 +38,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-v3.4-OC"
+CONFIG_LOCALVERSION="-India-v3.5-OC"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -448,7 +448,6 @@ CONFIG_SEC_THERMISTOR=y
 CONFIG_ANDROID_WIP=y
 CONFIG_COMPACTION_RETRY=y
 # CONFIG_COMPACTION_RETRY_DEBUG is not set
-# CONFIG_SEC_DUAL_MODEM_MODE is not set
 
 #
 # EXYNOS4 Machines
@@ -543,7 +542,7 @@ CONFIG_T0_04_BD=y
 # CONFIG_IPCAM_00_BD is not set
 # CONFIG_IPCAM_01_BD is not set
 # CONFIG_GC2PD_00_BD is not set
-# CONFIG_MACH_SF2 is not set
+# CONFIG_SF2_CAM_REV0 is not set
 # CONFIG_WRITEBACK_ENABLED is not set
 CONFIG_EXYNOS_SOUND_PLATFORM_DATA=y
 # CONFIG_JACK_FET is not set
