Implemented Wolfson Sound (Optional, disabled by default)

--- a/drivers/media/video/samsung/Makefile
+++ b/drivers/media/video/samsung/Makefile
@@ -33,4 +33,6 @@ endif
 
 obj-$(CONFIG_VIDEO_TSI)		+= tsi/
 
+obj-$(CONFIG_EXYNOS_MEDIA_MONITOR)  += media_monitor/
+
 EXTRA_CFLAGS += -Idrivers/media/video
