--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -2156,3 +2156,8 @@ config PM_DEBUG_WAKEUP_RESET
 	bool "Log the Power Management debug information"
 	help
 	  This configuratoin is only for debugging the PM interrupt issue.
+
+config ABB_CONTROL
+	bool "Adaptive body bias control"
+	depends on EXYNOS4_CPUFREQ && CPU_EXYNOS4412
+	default n
