--- a/arch/arm/configs/psn_v3.9_defconfig
+++ b/arch/arm/configs/psn_v3.9_defconfig
@@ -670,7 +670,7 @@ CONFIG_USB_CDFS_SUPPORT=y
 # CONFIG_MACH_GD2_SENSOR is not set
 # CONFIG_USER_RESET_DEBUG is not set
 CONFIG_PM_DEBUG_WAKEUP_RESET=y
-# CONFIG_ABB_CONTROL is not set
+CONFIG_ABB_CONTROL=y
 
 #
 # Processor Type
