--- a/arch/arm/configs/psn_t0ltevzw_v3.9_wolfson_defconfig
+++ b/arch/arm/configs/psn_t0ltevzw_v3.9_wolfson_defconfig
@@ -635,7 +635,7 @@ CONFIG_CPU_FREQ_TETHERING=y
 # CONFIG_MACH_GD2_SENSOR is not set
 # CONFIG_USER_RESET_DEBUG is not set
 CONFIG_PM_DEBUG_WAKEUP_RESET=y
-# CONFIG_ABB_CONTROL is not set
+CONFIG_ABB_CONTROL=y
 
 #
 # Processor Type
