--- a/arch/arm/configs/psn_i9300_v3.5_wolfson_defconfig
+++ b/arch/arm/configs/psn_i9300_v3.5_wolfson_defconfig
@@ -638,7 +638,7 @@ CONFIG_USB_CDFS_SUPPORT=y
 # CONFIG_CORESIGHT_ETM is not set
 # CONFIG_MACH_KONA_SENSOR is not set
 # CONFIG_MACH_GD2_SENSOR is not set
-# CONFIG_ABB_CONTROL is not set
+CONFIG_ABB_CONTROL=y
 
 #
 # Processor Type
