--- a/arch/arm/configs/psn_i9305_v3.5_wolfson_defconfig
+++ b/arch/arm/configs/psn_i9305_v3.5_wolfson_defconfig
@@ -620,7 +620,7 @@ CONFIG_CPU_FREQ_TETHERING=y
 # CONFIG_MACH_KONA_SENSOR is not set
 # CONFIG_MACH_GD2_SENSOR is not set
 # CONFIG_TDSCDMA_MODEM_SPRD8803 is not set
-# CONFIG_ABB_CONTROL is not set
+CONFIG_ABB_CONTROL=y
 
 #
 # Processor Type
