drivers/cpufreq: YankasusQ governor (Based on PegasusQ)

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -162,6 +162,10 @@ config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
 config CPU_FREQ_DEFAULT_GOV_PEGASUSQPLUS
 	bool "pegasusqplus"
 	select CPU_FREQ_GOV_PEGASUSQPLUS
+
+config CPU_FREQ_DEFAULT_GOV_YANKASUSQ
+	bool "yankasusq"
+	select CPU_FREQ_GOV_YANKASUSQ
 	
 endchoice
 
@@ -338,6 +342,11 @@ config CPU_FREQ_GOV_ZZMOOVE
 	  Modified by Zane Zaminsky November 2012 to be
 	  hotplug-able and optimzed for use with Samsung I9300.
 
+config CPU_FREQ_GOV_YANKASUSQ
+	tristate "'yankasusq' cpufreq policy governor"
+	help
+	  based on PegasusQ - This driver is work in progress
+	  
 config CPU_FREQ_GOV_LULZACTIVEQ
         tristate "'lulzactiveq' cpufreq governor"
         depends on CPU_FREQ
