--- a/arch/arm/configs/psn_i9300_v3.5.4_defconfig
+++ b/arch/arm/configs/psn_i9300_v3.5.4_defconfig
@@ -37,7 +37,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-India-v3.5.3-OC-INTL"
+CONFIG_LOCALVERSION="-India-v3.5.4-OC-INTL"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -3460,7 +3460,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
 CONFIG_ASYNC_FSYNC=y
-CONFIG_DYNAMIC_FSYNC=y
+# CONFIG_DYNAMIC_FSYNC is not set
 # CONFIG_RESTRICT_ROOTFS_SLAVE is not set
 
 #
